# Rayforge-iOS-ipa

./: .gitignore  HANDOFF.md  README.md
.github/workflows/: ios-step1-glib.yml  ios-step10-pygobject.yml  ios-step11-rayforge.yml  ios-step12-device-ipa.yml  ios-step2-cairo-pango.yml  ios-step3-pixbuf-graphene.yml  ios-step4-gtk.yml  ios-step5-gtk-ios-backend.yml  ios-step6-simulator-test.yml  ios-step7-libadwaita.yml  ios-step8-python.yml  ios-step9-introspection.yml
ci-logs-debug/: publish-fail-run-28799597912.txt
ci-logs/step1/run-28544558540/: SUMMARY.txt  glib-build_meson-logs_meson-log.txt  ios-arm64-cross.txt
ci-logs/step1/run-28544704767/: SUMMARY.txt  glib-build_meson-logs_meson-log.txt
ci-logs/step1/run-28544907261/: SUMMARY.txt  glib-build_meson-logs_meson-log.txt  ios-arm64-cross.txt
ci-logs/step1/run-28545063574/: SUMMARY.txt  glib-build_meson-logs_meson-log.txt
ci-logs/step1/run-28545988221/: SUMMARY.txt  glib-build_meson-logs_meson-log.txt  ios-arm64-cross.txt
ci-logs/step10/run-28681379503/: SUMMARY.txt
ci-logs/step10/run-28684414157/: SUMMARY.txt
ci-logs/step10/run-28684432557/: SUMMARY.txt
ci-logs/step10/run-28684645637/: SUMMARY.txt
ci-logs/step10/run-28684694865/: SUMMARY.txt
ci-logs/step10/run-28684922431/: SUMMARY.txt
ios/adw-shims/: appstream-stub.c  appstream.h
ios/gdk-ios/: gdkios.h  gdkioscairocontext.c  gdkiosdisplay.c  gdkiosmain.c  gdkiosprivate.h  gdkiossurface.c  meson.build
ios/pyshims/: ios_main.py  rayforge_ios_filepicker.py  rayforge_ios_glarea.py  rayforge_ios_pool.py  rayforge_ios_shm.py  rayforge_ios_svg.py  rayforge_ios_vecops.py
ios/rayforge-patches/: patch-rayforge-ios.py
ios/scripts/: build-base-stack.sh  fix-gir-sharedlib.py  gen-cross-file.sh  ios_logging.py  patch-adw-ios.py  patch-gtk-ios.py  patch-rayforge-ios.py  sim-run.sh  sim-spawn.sh
ios/testapp/: main-adw.c  main-py-adw.c  main-pygi.c  main-rayforge.c  main.c
ios/vtracer-rs/: Cargo.toml  pyproject.toml
ios/vtracer-rs/src/: lib.rs
(+150 files in other folders)
